--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="preston.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="Headshot 2015.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Preston Lim</p>
-					<p class="text-title-company">Associate Software Engineer</p>
-					<p class="text-title-company">Data Science Division, GovTech</p>
+					<p class="text-name">Steven Martonffy, P.A.</p>
+					<p class="text-title-company">Realtor | Top Producer</p>
+					<p class="text-title-company">Martonffy Group</p>
 				</div>
 				<div class="col">
-					<img src="assets/govtech-logo-blue.svg" alt="Company Logo">
+					<img src="assets/MG_Brand_ID_whit_clr.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:preston@data.gov.sg">
+		<a href="mailto:StevenMartonffy@keyes.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">preston@data.gov.sg</p>
+						<p class="text-detail">StevenMartonffy@keyes.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+6591234567">
+		<a href="tel:7862779258">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+65) 9123 4567</p>
+						<p class="text-detail">786.277.9258</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.tech.gov.sg">
+		<a href="https://www.StevenMartonffy.Keyes.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">tech.gov.sg</p>
+						<p class="text-detail">StevenMartonffy.Keyes.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,15 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com.sg/maps/place/GovTech+Hive/@1.2998708,103.7871504,17z/
-		data=!3m1!4b1!4m5!3m4!1s0x31da1a457344a501:0x2202a995a6abc728!8m2!3d1.2998708!4d103.7893391">
+		<a href="https://www.google.com/maps/place/2423+S+Le+Jeune+Rd,+Coral+Gables,+FL+33134/@25.7487051,-80.2646812,17z/data=!3m1!4b1!4m5!3m4!1s0x88d9b7908b698d75:0x835544b16d4e74b0!8m2!3d25.7487003!4d-80.2624925">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">1 Fusionopolis, Sandcrawler, #09-01, 138577</p>
+						<p class="text-detail">2423 Le Jeune Road, Coral Gables, Florida 33134</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
