--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="https://github.com/garrettscotti/Steven-Martonffy-digital-card/blob/master/MG_Brand_ID_whit_clr.png" alt="Profile Picture">
+					<img class="profile-pic" src="Headshot 2015.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
