--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Martonffy Group</p>
 				</div>
 				<div class="col">
-					<img src="assets/MG-Logo-blk.svg" alt="Company Logo">
+					<img class="logo"src="assets/MG-Logo-blk.svg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
